--- a/public/backoffice/css/main.css
+++ b/public/backoffice/css/main.css
@@ -1,10 +1,59 @@
+/* ===
+**** Global ****
+=== */
 body {
     background: #f8f9fa;
 }
+.h1, h2, h3, h4, h5, h6 {
+    text-transform: capitalize;
+}
+a {
+    text-decoration: none;
+    color: #1c1c1cad;
+}
+/* ===
+**** quatity custom css ****
+    === */
+.qty-container {
+    display: flex;
+}
+.qty-container .input-qty {
+    text-align: center;
+    padding: 6px 10px;
+    border: 1px solid #d4d4d4;
+    max-width: 80px;
+}
+.qty-container .qty-btn-minus,
+.qty-container .qty-btn-plus {
+    border: 1px solid #d4d4d4;
+    padding: 10px 13px;
+    font-size: 10px;
+    height: 38px;
+    width: 38px;
+    transition: 0.3s;
+}
+.qty-container .qty-btn-plus {
+    margin-left: -1px;
+}
+.qty-container .qty-btn-minus {
+    margin-right: -1px;
+}
+
+/* ====
+   ***** navabar ***** 
+   === */
 nav.bg-body-tertiary {
     height: 68px;
     background-color: #FFF !important;
 }
+.dropdown-item i {
+    display: inline-block !important;
+    width: 20px;
+}
+
+/* ===
+**** left sidebar offcanvas ***** 
+   === */
 .offcanvas {
     width: 240px !important;
     background-color: #00425AFF !important;
@@ -22,7 +71,7 @@ nav.bg-body-tertiary {
     display: block;
     text-decoration: none;
     color: #FFF;
-    padding: 20px;
+    padding: 15px;
 }
 .list-group-item > a:hover {
    background-color: rgba(0, 0, 0, 0.2);
@@ -30,13 +79,14 @@ nav.bg-body-tertiary {
 .list-group-item > a .sidebar-item {
     display: inline-block;
     margin-left: 16px;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: capitalize;
     font-weight: 500;
 }
 
 .list-group-item > a i {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     color: #9aa4b2;
+    width: 26px;
 }
