--- a/public/frontoffice/css/main.css
+++ b/public/frontoffice/css/main.css
@@ -1,28 +1,138 @@
-* {
-    font-family: cairo;
+/* ===
+    ***** main colors **** 
+    blue : #00425a
+    red : #db5656
+    === */
+body {
+    font-family: none !important;
+    color: #1a1919 !important
+}
+label {
+    color: #7e7e7e;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 400;
+}
+hr{
+    border-width: 1px;
+}
+
+/* ===
+***** bootstrap fix **** 
+=== */
+.bg-body-tertiary {
+    background-color: #FFF !important;   
+}
+.new-price, .old-price {
+    font-family: sans-serif;
+}
+.btn-primary {
+    background-color: #00425a;
+    border-color: #00425a;
+    border-radius: 4px;
+    padding: 10px 40px;
+    font-size: 20px;
+    display: block;
+    width: 100%;
+}
+.btn-primary:hover {
+
+    background-color: #03394c;
+    border-color: #00425a;
 }
 .list-unstyled > .list-item {
     display: inline-block;
-    margin: 10px 7px;
+    margin-left: 17px;
 }
 .list-unstyled > .list-item > a{
   text-decoration: none;
   color: #cd0404;
 }
-.row {
-    
-}
-.row >div {
-    margin-left: -6px;
-    margin-right: -6px;
-}
 .badge {
     padding: 9px 15px;
-    border-radius: 0;
+    border-radius: 5px;
 }
-.btn {
-    border-radius: 2px;
-}
+
 input{
     border-radius: 0 !important;
+}
+
+/* === 
+    **** top navbar sale bar ****
+=== */
+.top-navbar {
+    background-color: #000000;
+    color: #ffffff;
+    height: 48px;
+}
+.sale-notification {
+    color: #FFF;
+    text-align: center;
+    line-height: 2.7em;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+/* ===
+    ***** sale page **** 
+    === */
+.product-name {
+    font-weight: 900;
+    margin: 0;
+    font-size: 33px;
+}
+.nav-item {
+    position: relative;
+    justify-content: center;
+}
+.product-description-title {
+    text-align: center;
+    font-weight: 600;
+    position: relative;
+    width: 100px;
+    margin: 0 auto;
+    color: #000;
+    font-size: 22px;
+}
+.btn-link {
+    text-decoration: none;
+}
+.btn-link.active:after {
+    position: absolute;
+    content: "";
+    height: 2px;
+    bottom: -17px;
+    right: 0;
+    width: 114px;
+    background-color: #db5656;
+}
+#main-img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.variants-img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.product-description {
+    max-width: 100%;
+}
+.product-description img{
+    max-width: 100%;
+}
+.form-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 12px 0px;
+    font-family: none;
+}
+.new-price {
+    font-size: 25px;
+    font-weight: 600;
+    color: #db5656;
+    margin: 0 12px;
+}
+.call-to-action {
+    font-weight: 600;
+
 }
